Fixed hour movement bug with a z-index change on the hands!

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ main .clock {
     transform-origin: 100%;
     transform: rotate(90deg);
     transition: transform 50ms cubic-bezier(0, 1.6, 0.1, 1.83);
+    z-index: 1;
 }
 
 .hand.hour-hand {
